fix overflow issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,7 @@ body {
   max-width: 100vw;
   white-space: pre-wrap;
   background-color: #000;
+  overflow-x: clip;
 }
 
 a {
